<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_ins">



    <LinearLayout
        android:id="@+id/head_lr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/back_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/back_arrow"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4.3"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/head_titletv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorPrimary"
                android:text="@string/dash_head"/>


            <TextView
                android:id="@+id/adminpage_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="-10dp"
                android:text="@string/dash_sub_head"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/role_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/textcolr"
                android:text="@string/dash_head"/>


            <TextView
                android:id="@+id/sub_titletv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_9sdp"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:layout_marginTop="-10dp"
                android:text="@string/superadminpage"/>


            <TextView
                android:id="@+id/logout_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="-5dp"
                android:text="@string/logout"/>
        </LinearLayout>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head_lr"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_90sdp"
            android:layout_marginTop="15dp"
            android:weightSum="3"
            android:layout_below="@+id/head_lr">





            <LinearLayout
                android:id="@+id/lnr_machining"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_75sdp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/dash_border"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_2_dash"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/dash2"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnr_electroplating"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_75sdp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="@drawable/dash_border"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_3_dash"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/dash3"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnr_assembling"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_75sdp"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:gravity="center"
                android:background="@drawable/dash_border"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_4_dash"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/dash4"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_90sdp"
            android:layout_marginTop="15dp"
            android:weightSum="3"
            android:layout_below="@+id/head_lr">



            <LinearLayout
                android:id="@+id/qcreport"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_75sdp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/dash_border"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/qc2"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/dash1"/>

            </LinearLayout>




            <LinearLayout
                android:id="@+id/statusreport"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_75sdp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="@drawable/dash_border"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_5_dash"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="@dimen/_10sdp"
                    android:text="@string/dash5"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dispatch"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_75sdp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="@drawable/dash_border"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_6_dash"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textSize="@dimen/_10sdp"
                    android:text="Move to Dispatch"/>
            </LinearLayout>






        </LinearLayout>
    </LinearLayout>











    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_alignParentBottom="true">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="@dimen/_9sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/colorAccent"
                    android:text="Released Version 1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">




            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/srinar_small_logo"/>
            </LinearLayout>










        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>