<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_ins">



    <LinearLayout
        android:id="@+id/head_lr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/back_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/back_arrow"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.3"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/head_titletv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorPrimary"
                android:text="@string/login_head"/>


            <TextView
                android:id="@+id/sub_titletv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="-10dp"
                android:text="@string/login_sub_head"/>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/input_lr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@+id/head_lr">



        <LinearLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/users_spn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Role"
                android:paddingLeft="@dimen/_10sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableLeft="@drawable/username"
                android:singleLine="true"
                android:textColor="@color/textcolr"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>





        <EditText
            android:id="@+id/user_edt"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:hint="Employee Id"
            android:drawablePadding="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:inputType="textCapWords"
            android:textSize="@dimen/_12sdp"
            android:drawableLeft="@drawable/username"/>



        <EditText
            android:id="@+id/pwd_edt"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:drawablePadding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:drawableLeft="@drawable/password"/>



            <ImageView
                android:id="@+id/login_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/submit_btn"/>

    </LinearLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/_5sdp"
                android:textSize="@dimen/_9sdp"
                android:text="@string/terms"/>


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>