<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_ins">

    <LinearLayout
        android:id="@+id/head_lr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/back_arrow"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.3"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/head_titletv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorPrimary"
                android:text="Upload File Details"/>
m

            <TextView
                android:id="@+id/sub_titletv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="-10dp"
                android:text="@string/machine_sub_head"/>
        </LinearLayout>





        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">



            <TextView
                android:id="@+id/singlepart_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="right"
                android:gravity="right"
                android:textColor="@color/bluetext"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/single_upload"/>


            <TextView
                android:id="@+id/view_part_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="right"
                android:gravity="right"
                android:textColor="@color/red"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/view_upload"/>


        </LinearLayout>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="@dimen/_80sdp"
        android:layout_marginRight="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@+id/head_lr"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/excel_file"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="4">
                <TextView
                    android:id="@+id/select_file_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textSize="@dimen/_13sdp"
                    android:hint="Select File"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.5">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/excel_file_icon"/>
            </LinearLayout>


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/soft_grey"/>


                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/month_spn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Select Month"
                    android:textSize="@dimen/_11sdp"/>


                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/year_spn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Select Year"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/_11sdp"/>



        <TextView
            android:id="@+id/txtPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/textcolr"
            android:textSize="30dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="35dp"
            android:visibility="gone"/>



        <ImageView
            android:id="@+id/upload_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAllCaps="false"
            android:background="@drawable/upload_icon"/>






    </LinearLayout>
    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_alignParentBottom="true">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="@dimen/_9sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/colorAccent"
                    android:text="Released Version 1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">




            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/mini_logo"/>
            </LinearLayout>










        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>